// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SectionContainer > should render correctly 1`] = `
<body>
  <div>
    <section
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-u52cu0-MuiPaper-root"
    >
      <div
        class="MuiStack-root css-jfdv4h-MuiStack-root"
      >
        <div
          class="MuiStack-root css-3y1137-MuiStack-root"
        />
      </div>
      <div
        class="MuiBox-root css-zv7ju9"
      />
    </section>
  </div>
</body>
`;

exports[`SectionContainer > should render correctly with description 1`] = `
<body>
  <div>
    <section
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-u52cu0-MuiPaper-root"
    >
      <div
        class="MuiStack-root css-jfdv4h-MuiStack-root"
      >
        <div
          class="MuiStack-root css-3y1137-MuiStack-root"
        />
        <p
          class="MuiTypography-root MuiTypography-body2 css-r40f8v-MuiTypography-root"
        >
          description
        </p>
      </div>
      <div
        class="MuiBox-root css-1yuhvjn"
      />
    </section>
  </div>
</body>
`;

exports[`SectionContainer > should render correctly with title 1`] = `
<body>
  <div>
    <section
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-u52cu0-MuiPaper-root"
    >
      <div
        class="MuiStack-root css-jfdv4h-MuiStack-root"
      >
        <div
          class="MuiStack-root css-3y1137-MuiStack-root"
        >
          <h2
            class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
          >
            title
          </h2>
        </div>
      </div>
      <div
        class="MuiBox-root css-1yuhvjn"
      />
    </section>
  </div>
</body>
`;

exports[`SectionContainer > should render correctly with title and description 1`] = `
<body>
  <div>
    <section
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-u52cu0-MuiPaper-root"
    >
      <div
        class="MuiStack-root css-jfdv4h-MuiStack-root"
      >
        <div
          class="MuiStack-root css-3y1137-MuiStack-root"
        >
          <h2
            class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
          >
            title
          </h2>
        </div>
        <p
          class="MuiTypography-root MuiTypography-body2 css-r40f8v-MuiTypography-root"
        >
          description
        </p>
      </div>
      <div
        class="MuiBox-root css-1yuhvjn"
      />
    </section>
  </div>
</body>
`;

exports[`SectionContainerSkeleton > should render correctly 1`] = `
<body>
  <div>
    <span
      class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-1q3jyn0-MuiSkeleton-root"
    />
  </div>
</body>
`;
